cmake_minimum_required(VERSION 3.16)
project(funny-leetcode)

set(CMAKE_CXX_STANDARD 20)

# 该目录下文件为阅读 《算法竞赛入门经典（第二版）》 所产生文件
add_subdirectory(acm-intro/)

# 该目录下文件为《程序员面试金典》涉及程序
add_subdirectory(interview-book/)


add_executable(cc main.cc complex_node.hh)
add_executable(No1 No1.cc)
add_executable(No2 No2.cc)
add_executable(No7 No7.cc)
add_executable(No9 No9.cc)

add_executable(No23 No23.cc)
add_executable(No24 No24.cc)
add_executable(No25 No25.cc)
add_executable(No26 No26.cc)
add_executable(No27 No27.cc)
add_executable(No28 No28.cc)

add_executable(No29 No29.cc)
add_executable(No31 No31.cc)
add_executable(No32 No32.cc)
add_executable(No33 No33.cc)
add_executable(No34 No34.cc)
add_executable(No35 No35.cc)

add_executable(No36 No36.cc)

add_executable(No37 No37.cc)
add_executable(No38 No38.cc)

add_executable(No39 No39.cc)
add_executable(No40 No40.cc)
add_executable(No41 No41.cc)
add_executable(No42 No42.cc)
add_executable(No43 No43.cc)

add_executable(No44 No44.cc)
add_executable(No45 No45.cc)
add_executable(No46 No46.cc)

add_executable(No47 No47.cc)
add_executable(No48 No48.cc)

add_executable(weekly-contest-198-No1 weekly-contest-198/No1.cc)

add_executable(No49 No49.cc)
add_executable(No50 No50.cc)
add_executable(No53 No53.cc)
add_executable(No54 No54.cc)

add_executable(No55 No55.cc)
add_executable(No56 No56.cc)
add_executable(No57 No57.cc)
add_executable(No58 No58.cc)
add_executable(No59 No59.cc)
add_executable(No60 No60.cc)

add_executable(No61 No61.cc)
add_executable(No62 No62.cc)
add_executable(No63 No63.cc)
add_executable(No64 No64.cc)
add_executable(No65 No65.cc)
add_executable(No66 No66.cc)

add_executable(No67 No67.cc)
add_executable(No68 No68.cc)
add_executable(No69 No69.cc)
add_executable(No70 No70.cc)
add_executable(No71 No71.cc)
add_executable(No72 No72.cc)

add_executable(No73 No73.cc)
add_executable(No74 No74.cc)
add_executable(No75 No75.cc)
add_executable(No76 No76.cc)
add_executable(No77 No77.cc)
add_executable(No78 No78.cc)

add_executable(No79 No79.cc)
add_executable(No80 No80.cc)
add_executable(No81 No81.cc)

add_executable(No82 No82.cc)
add_executable(No83 No83.cc)
add_executable(No84 No84.cc)
add_executable(No85 No85.cc)
add_executable(No86 No86.cc)
add_executable(No88 No88.cc)

add_executable(No89 No89.cc)
add_executable(No90 No90.cc)
add_executable(No92 No92.cc)
add_executable(No93 No93.cc)
add_executable(No94 No94.cc)
add_executable(No95 No95.cc)
add_executable(No96 No96.cc)
add_executable(No97 No97.cc)
add_executable(No98 No98.cc simple_node.hh)
add_executable(No99 No99.cc complex_node.hh)
add_executable(No100 No100.cc complex_node.hh)

add_executable(No101 No101.cc)
add_executable(No102 No102.cc)
add_executable(No103 No103.cc)
add_executable(No104 No104.cc)
add_executable(No105 No105.cc)
add_executable(No106 No106.cc)
add_executable(No107 No107.cc)
add_executable(No108 No108.cc)
add_executable(No109 No109.cc)
add_executable(No110 No110.cc)
add_executable(No111 No111.cc)
add_executable(No112 No112.cc)

add_executable(No113 No113.cc)
add_executable(No114 No114.cc)
add_executable(No115 No115.cc)
add_executable(No116 No116.cc)
add_executable(No117 No117.cc)
add_executable(No118 No118.cc)
add_executable(No119 No119.cc)
add_executable(No120 No120.cc)

add_executable(No121 No121.cc)
add_executable(No122 No122.cc)
add_executable(No123 No123.cc)
add_executable(No124 No124.cc)
add_executable(No125 No125.cc)

add_executable(No126 No126.cc)
add_executable(No127 No127.cc)
add_executable(No128 No128.cc)
add_executable(No129 No129.cc)
add_executable(No130 No130.cc)
add_executable(No131 No131.cc)

add_executable(No132 No132.cc)
add_executable(No133 No133.cc)
add_executable(No134 No134.cc)
add_executable(No135 No135.cc)
add_executable(No136 No136.cc)

add_executable(No137 No137.cc)
add_executable(No138 No138.cc)
add_executable(No139 No139.cc)
add_executable(No140 No140.cc)
add_executable(No141 No141.cc)
add_executable(No142 No142.cc)

add_executable(No143 No143.cc)
add_executable(No144 No144.cc)
add_executable(No145 No145.cc)
add_executable(No146 No146.cc)
add_executable(No147 No147.cc)
add_executable(No148 No148.cc)
add_executable(No149 No149.cc)
add_executable(No150 No150.cc)

add_executable(No151 No151.cc)
add_executable(No152 No152.cc)
add_executable(No153 No153.cc)
add_executable(No154 No154.cc)
add_executable(No155 No155.cc)
add_executable(No156 No156.cc)
add_executable(No157 No157.cc)
add_executable(No158 No158.cc)
add_executable(No159 No159.cc)
add_executable(No160 No160.cc)

add_executable(No162 No162.cc)
add_executable(No164 No164.cc)
add_executable(No166 No166.cc)
add_executable(No167 No167.cc)
add_executable(No168 No168.cc)
add_executable(No169 No169.cc)

add_executable(No171 No171.cc)
add_executable(No172 No172.cc)
add_executable(No173 No173.cc)
add_executable(No174 No174.cc)
add_executable(No179 No179.cc)
add_executable(No187 No187.cc)

add_executable(No188 No188.cc)
add_executable(No189 No189.cc)
add_executable(No190 No190.cc)

add_executable(No191 No191.cc)
add_executable(No198 No198.cc)
add_executable(No199 No199.cc)
add_executable(No200 No200.cc)
add_executable(No201 No201.cc)
add_executable(No202 No202.cc)
add_executable(No203 No203.cc)
add_executable(No204 No204.cc)
add_executable(No205 No205.cc)
add_executable(No206 No206.cc)

add_executable(No207 No207.cc)
add_executable(No208 No208.cc)
add_executable(No209 No209.cc)
add_executable(No210 No210.cc)
add_executable(No211 No211.cc)
add_executable(No213 No213.cc)
add_executable(No214 No214.cc)
add_executable(No215 No215.cc)
add_executable(No216 No216.cc)
add_executable(No217 No217.cc)

add_executable(No218 No218.cc)
add_executable(No219 No219.cc)
add_executable(No220 No220.cc)
add_executable(No221 No221.cc)
add_executable(No222 No222.cc)
add_executable(No223 No223.cc)
add_executable(No224 No224.cc)
add_executable(No225 No225.cc)
add_executable(No226 No226.cc)
add_executable(No227 No227.cc)
add_executable(No228 No228.cc libs.hh)

add_executable(biweekly-contest-33-No1 biweekly-contest-33/No1.cc)
add_executable(biweekly-contest-33-No2 biweekly-contest-33/No2.cc)
add_executable(biweekly-contest-33-No3 biweekly-contest-33/No3.cc)
add_executable(biweekly-contest-33-No4 biweekly-contest-33/No4.cc)

add_executable(No229 No229.cc)
add_executable(No230 No230.cc)
add_executable(No231 No231.cc)
add_executable(No232 No232.cc)
add_executable(No233 No233.cc)
add_executable(No234 No234.cc)
add_executable(No235 No235.cc)
add_executable(weekly-contest-203-No1 weekly-contest-203/No1.cc)
add_executable(No236 No236.cc)
add_executable(No237 No237.cc)
add_executable(No238 No238.cc)
add_executable(No239 No239.cc)
add_executable(No240 No240.cc)

add_executable(No241 No241.cc)
add_executable(No242 No242.cc)
add_executable(No257 No257.cc)
add_executable(No258 No258.cc)
add_executable(No260 No260.cc)
add_executable(No263 No263.cc)
add_executable(No264 No264.cc)
add_executable(No268 No268.cc)
add_executable(No274 No274.cc)
add_executable(No275 No275.cc)

add_executable(No278 No278.cc)
add_executable(No279 No279.cc)
add_executable(No283 No283.cc)
add_executable(No284 No284.cc)
add_executable(No287 No287.cc)
add_executable(No289 No289.cc)
add_executable(No290 No290.cc)
add_executable(No292 No292.cc)
add_executable(No295 No295.cc)
add_executable(No297 No297.cc)
add_executable(No299 No299.cc)
add_executable(No300 No300.cc)

add_executable(No303 No303.cc)
add_executable(No304 No304.cc)
add_executable(No307 No307.cc)
add_executable(No309 No309.cc)

add_executable(No310 No310.cc)
add_executable(No312 No312.cc)
add_executable(No313 No313.cc)
add_executable(No316 No316.cc)
add_executable(No318 No318.cc)
add_executable(No319 No319.cc)
add_executable(No321 No321.cc)
add_executable(No322 No322.cc)
add_executable(No324 No324.cc)
add_executable(No326 No326.cc)

add_executable(No328 No328.cc)
add_executable(No329 No329.cc)
add_executable(No330 No330.cc)
add_executable(No331 No331.cc)
add_executable(No332 No332.cc)
add_executable(No334 No334.cc)
add_executable(No335 No335.cc)
add_executable(No337 No337.cc)
add_executable(No338 No338.cc)
add_executable(No341 No341.cc)

add_executable(No342 No342.cc)
add_executable(No343 No343.cc)
add_executable(No344 No344.cc)
add_executable(No345 No345.cc)
add_executable(No347 No347.cc)
add_executable(No349 No349.cc)
add_executable(No350 No350.cc)
add_executable(No354 No354.cc)

add_executable(weekly-contest-204-No1 weekly-contest-204/No1.cc)
add_executable(weekly-contest-204-No2 weekly-contest-204/No2.cc)

add_executable(No355 No355.cc)
add_executable(No357 No357.cc)
add_executable(No367 No367.cc)
add_executable(No368 No368.cc)
add_executable(No371 No371.cc)
add_executable(No372 No372.cc)
add_executable(No374 No374.cc)
add_executable(No375 No375.cc)

add_executable(No376 No376.cc)
add_executable(No377 No377.cc)
add_executable(No378 No378.cc)

add_executable(No380 No380.cc)
add_executable(No381 No381.cc)
add_executable(No382 No382.cc)

add_executable(No383 No383.cc)
add_executable(No384 No384.cc)
add_executable(No385 No385.cc)

add_executable(No386 No386.cc)
add_executable(No387 No387.cc)
add_executable(No389 No389.cc)

add_executable(No390 No390.cc)
add_executable(No391 No391.cc)
add_executable(No392 No392.cc)

add_executable(No393 No393.cc)
add_executable(No394 No394.cc)
add_executable(No395 No395.cc)

add_executable(No396 No396.cc)
add_executable(lccup20-No1 lccup20/No1.cc)
add_executable(lccup20-No2 lccup20/No2.cc)
add_executable(lccup20-No3 lccup20/No3.cc)

add_executable(No397 No397.cc)
add_executable(No398 No398.cc)
add_executable(No400 No400.cc)
add_executable(weekly-contest-206-No1 weekly-contest-206/No1.cc)

add_executable(No401 No401.cc)
add_executable(No402 No402.cc)
add_executable(No403 No403.cc)
add_executable(No404 No404.cc)

add_executable(No405 No405.cc)
add_executable(No406 No406.cc)
add_executable(No409 No409.cc)

add_executable(No412 No412.cc)
add_executable(No413 No413.cc)
add_executable(No414 No414.cc)

add_executable(No415 No415.cc)
add_executable(No416 No416.cc)
add_executable(No419 No419.cc)

add_executable(No421 No421.cc)
add_executable(No423 No423.cc)
add_executable(No424 No424.cc)

add_executable(No429 No429.cc)
add_executable(2020-fall-No1 2020-fall/No1.cc)
add_executable(No430 No430.cc)
add_executable(No433 No433.cc)
add_executable(biweekly-contest-35-No1 biweekly-contest-35/No1.cc)
add_executable(weekly-contest-207-No1 weekly-contest-207/No1.cc)
add_executable(No434 No434.cc)
add_executable(No435 No435.cc)
add_executable(No437 No437.cc)

add_executable(No438 No438.cc)
add_executable(No440 No440.cc)
add_executable(No441 No441.cc)

add_executable(No442 No442.cc)
add_executable(No443 No443.cc)
add_executable(No445 No445.cc)

add_executable(No446 No446.cc)
add_executable(No447 No447.cc)
add_executable(No448 No448.cc)

add_executable(No449 No449.cc)
add_executable(No450 No450.cc)
add_executable(No451 No451.cc)

add_executable(No452 No452.cc)
add_executable(No453 NO453.cc)
add_executable(No454 No454.cc)

add_executable(No455 No455.cc)
add_executable(No456 No456.cc)
add_executable(No457 No457.cc)

add_executable(No458 No458.cc)
add_executable(No459 No459.cc)
add_executable(No461 No461.cc)
add_executable(No462 No462.cc)

add_executable(No463 No463.cc)
add_executable(No464 No464.cc)
add_executable(No467 No467.cc)
add_executable(No470 No470.cc)

add_executable(No473 No473.cc)
add_executable(No474 No474.cc)
add_executable(No475 No475.cc)

add_executable(No476 No476.cc)
add_executable(No477 No477.cc)
add_executable(No478 No478.cc)

add_executable(No479 No479.cc)
add_executable(No482 No482.cc)
add_executable(No485 No485.cc)

add_executable(No486 No486.cc)
add_executable(No491 No491.cc)
add_executable(No492 No492.cc)
add_executable(No494 No494.cc)
add_executable(No495 No495.cc)

add_executable(No496 No496.cc)
add_executable(No497 No497.cc)
add_executable(No498 No498.cc)

add_executable(biweekly-contest-36-No1 biweekly-contest-36/No1.cc)
add_executable(weekly-contest-209-No1 weekly-contest-209/No1.cc)
add_executable(weekly-contest-209-No2 weekly-contest-209/No2.cc)
add_executable(No500 No500.cc)

add_executable(No501 No501.cc)
add_executable(No502 No502.cc)
add_executable(No503 No503.cc)
add_executable(No504 No504.cc)

add_executable(No506 No506.cc)
add_executable(No507 No507.cc)
add_executable(No508 No508.cc)

add_executable(No509 No509.cc)
add_executable(No513 No513.cc)
add_executable(No515 No515.cc)

add_executable(No516 No516.cc)
add_executable(No517 No517.cc)
add_executable(No519 No519.cc)

add_executable(No520 No520.cc)
add_executable(No521 No521.cc)
add_executable(No522 No522.cc)

add_executable(No523 No523.cc)
add_executable(No524 No524.cc)
add_executable(No525 No525.cc)

add_executable(weekly-contest-210-No1 weekly-contest-210/No1.cc)
add_executable(weekly-contest-210-No2 weekly-contest-210/No2.cc)
add_executable(weekly-contest-210-No3 weekly-contest-210/No3.cc)

add_executable(No530 No530.cc)
add_executable(No526 No526.cc)

add_executable(No532 No532.cc)
add_executable(No535 No535.cc)
add_executable(No537 No537.cc)

add_executable(No539 No539.cc)
add_executable(No540 No540.cc)

add_executable(No541 No541.cc)
add_executable(No542 No542.cc)
add_executable(No543 No543.cc)

add_executable(No547 No547.cc)
add_executable(No551 No551.cc)

add_executable(No553 No553.cc)
add_executable(No554 No554.cc)
add_executable(biweekly-contest-37-No1 biweekly-contest-37/No1.cc)

add_executable(No556 No556.cc)
add_executable(No557 No557.cc)
add_executable(No559 No559.cc)
add_executable(No560 No560.cc)
add_executable(weekly-contest-211-No1 weekly-contest-211/No1.cc)
add_executable(weekly-contest-211-No2 weekly-contest-211/No2.cc)

add_executable(No561 No561.cc)
add_executable(No563 No563.cc)

add_executable(No565 No565.cc)
add_executable(No566 No566.cc)
add_executable(No567 No567.cc)

add_executable(No572 No572.cc)
add_executable(No575 No575.cc)

add_executable(No581 No581.cc)
add_executable(No589 No589.cc)

add_executable(No590 No590.cc)
add_executable(No592 No592.cc)
add_executable(No593 No593.cc)

add_executable(No1024 No1024.cc)
add_executable(No594 No594.cc)
add_executable(No598 No598.cc)

add_executable(No599 No599.cc)
add_executable(No845 No845.cc)
add_executable(weekly-contest-212-No1 weekly-contest-212/No1.cc)
add_executable(weekly-contest-212-No2 weekly-contest-212/No2.cc)
add_executable(weekly-contest-212-No3 weekly-contest-212/No3.cc)

add_executable(No1365 No1365.cc)
add_executable(No583 No583.cc)
add_executable(No605 No605.cc)

add_executable(No1143 No1143.cc)
add_executable(No622 No622.cc)

add_executable(No1207 No1207.cc)
add_executable(No628 No628.cc)
add_executable(No606 No606.cc)

add_executable(No609 No609.cc)
add_executable(No611 No611.cc)

add_executable(No621 No621.cc)
add_executable(No630 No630.cc)
add_executable(No633 No633.cc)

add_executable(No636 No636.cc)
add_executable(No638 No638.cc)
add_executable(No639 No639.cc)
add_executable(biweekly-contest-38-No1 biweekly-contest-38/No1.cc)
add_executable(biweekly-contest-38-No2 biweekly-contest-38/No2.cc)
add_executable(biweekly-contest-38-No3 biweekly-contest-38/No3.cc)
add_executable(No641 No641.cc)

add_executable(weekly-contest-213-No1 weekly-contest-213/No1.cc)
add_executable(weekly-contest-213-No2 weekly-contest-213/No2.cc)

add_executable(No643 No643.cc)
add_executable(No645 No645.cc)

add_executable(No941 No941.cc)
add_executable(No646 No646.cc)
add_executable(No647 No647.cc)
add_executable(No648 No648.cc)

add_executable(No649 No649.cc)
add_executable(No650 No650.cc)

add_executable(No652 No652.cc)
add_executable(No653 No653.cc)

add_executable(No1356 No1356.cc)
add_executable(No654 No654.cc)
add_executable(No655 No655.cc)

add_executable(No327 No327.cc)
add_executable(No658 No658.cc)
add_executable(No659 No659.cc)

add_executable(No661 No661.cc)
add_executable(No662 No662.cc)
add_executable(No665 No665.cc)

add_executable(No973 No973.cc)
add_executable(No667 No667.cc)
add_executable(No668 No668.cc)

add_executable(No669 No669.cc)
add_executable(No670 No670.cc)
add_executable(No671 No671.cc)

add_executable(No672 No672.cc)
add_executable(No673 No673.cc)

add_executable(No674 No674.cc)
add_executable(No922 No922.cc)

add_executable(No676 No676.cc)
add_executable(No677 No677.cc)
add_executable(No678 No678.cc)

add_executable(No1122 No1122.cc)
add_executable(No680 No680.cc)
add_executable(No682 No682.cc)
add_executable(biweekly-contest-39-No1 biweekly-contest-39/No1.cc)
add_executable(biweekly-contest-39-No2 biweekly-contest-39/No2.cc)
add_executable(weekly-contest-215-No1 weekly-contest-215/No1.cc)
add_executable(weekly-contest-215-No2 weekly-contest-215/No2.cc)

add_executable(No684 No684.cc)
add_executable(NO686 No686.cc)
add_executable(No687 No687.cc)

add_executable(No1030 No1030.cc)
add_executable(No688 No688.cc)
add_executable(No690 No690.cc)

add_executable(No693 No693.cc)
add_executable(No692 No692.cc)
add_executable(No695 No695.cc)

add_executable(No696 No696.cc)
add_executable(No697 No697.cc)
add_executable(No700 No700.cc)

add_executable(No703 No703.cc)
add_executable(No704 No704.cc)
add_executable(No707 No707.cc)

add_executable(No705 No705.cc)
add_executable(No706 No706.cc)
add_executable(No710 No710.cc)

add_executable(No709 No709.cc)
add_executable(No712 No712.cc)
add_executable(No713 No713.cc)

add_executable(No714 No714.cc)
add_executable(No717 No717.cc)
add_executable(No718 No718.cc)

add_executable(No720 No720.cc)

add_executable(No722 No722.cc)
add_executable(No724 No724.cc)
add_executable(No1370 No1370.cc)

add_executable(No728 No728.cc)
add_executable(No725 No725.cc)
add_executable(No729 No729.cc)

add_executable(No731 No731.cc)
add_executable(No744 No744.cc)
add_executable(No732 No732.cc)

add_executable(No735 No735.cc)
add_executable(No746 No746.cc)
add_executable(biweekly-contest-40-No1 biweekly-contest-40/No1.cc)
add_executable(biweekly-contest-40-No2 biweekly-contest-40/No2.cc)

add_executable(weekly-contest-217-No1 weekly-contest-217/No1.cc)
add_executable(weekly-contest-217-No2 weekly-contest-217/No2.cc)
add_executable(No976 No976.cc)
add_executable(No738 No738.cc)

add_executable(No767 No767.cc)
add_executable(No747 No747.cc)