add_executable(Hot1 Hot1.cc)
add_executable(Hot2 Hot2.cc)
add_executable(Hot3 Hot3.cc)
add_executable(Hot5 Hot5.cc)
add_executable(Hot11 Hot11.cc)
add_executable(Hot15 Hot15.cc)

add_executable(Hot17 Hot17.cc)
add_executable(Hot19 Hot19.cc)
add_executable(Hot20 Hot20.cc)
add_executable(Hot21 Hot21.cc)
add_executable(Hot22 Hot22.cc)

add_executable(Hot31 Hot31.cc)
add_executable(Hot33 Hot33.cc)
add_executable(Hot34 Hot34.cc)
add_executable(Hot39 Hot39.cc)

