add_executable(Hot1 Hot1.cc)
add_executable(Hot2 Hot2.cc)
add_executable(Hot3 Hot3.cc)
add_executable(Hot5 Hot5.cc)
add_executable(Hot11 Hot11.cc)
add_executable(Hot15 Hot15.cc)

add_executable(Hot17 Hot17.cc)
add_executable(Hot19 Hot19.cc)
add_executable(Hot20 Hot20.cc)
add_executable(Hot21 Hot21.cc)
add_executable(Hot22 Hot22.cc)

add_executable(Hot31 Hot31.cc)
add_executable(Hot33 Hot33.cc)
add_executable(Hot34 Hot34.cc)
add_executable(Hot39 Hot39.cc)

add_executable(Hot53 Hot53.cc)
add_executable(Hot49 Hot49.cc)
add_executable(Hot48 Hot48.cc)
add_executable(Hot46 Hot46.cc)
add_executable(Hot55 Hot55.cc)
add_executable(Hot56 Hot56.cc)
add_executable(Hot62 Hot62.cc)
add_executable(Hot70 Hot70.cc)
add_executable(Hot64 Hot64.cc)
add_executable(Hot75 Hot75.cc)
add_executable(Hot78 Hot78.cc)
add_executable(Hot79 Hot79.cc)

add_executable(Hot94 Hot94.cc)
add_executable(Hot96 Hot96.cc)
add_executable(Hot98 Hot98.cc)
add_executable(Hot101 Hot101.cc)
add_executable(Hot102 Hot102.cc)
add_executable(Hot104 Hot104.cc)

add_executable(Hot105 Hot105.cc)
add_executable(Hot114 Hot114.cc)
add_executable(Hot121 Hot121.cc)
add_executable(Hot136 Hot136.cc)
add_executable(Hot128 Hot128.cc)
add_executable(Hot139 Hot139.cc)
add_executable(Hot141 Hot141.cc)
add_executable(Hot152 Hot152.cc)
add_executable(Hot155 Hot155.cc)
add_executable(Hot148 Hot148.cc)
add_executable(Hot142 Hot142.cc)
add_executable(Hot146 Hot146.cc)
add_executable(Hot160 Hot160.cc)
add_executable(Hot169 Hot169.cc)
add_executable(Hot200 Hot200.cc)