# 该目录下文件为《程序员面试金典》涉及程序

cmake_minimum_required(VERSION 3.16)

set(CMAKE_CXX_STANDARD 20)

add_executable(Q04 Q04.cc)

add_executable(CXXStandLibarySharedPointer CXXStandLibarySharedPointer.cc)
add_executable(CXXSmartPointer2 CXXSmartPointer2.cc)
#add_executable(L3VirtualDevice L3VirtualDevice.cc)
add_executable(VirtualFunctionExperiment VirtualFunctionExperiment.cc)
