# 一些基本的概念尝试
#add_subdirectory(tutorial)

add_executable(No09 No09.cc)
add_executable(No03 No03.cc)
add_executable(No04 No04.cc)
add_executable(No05 No05.cc)
add_executable(No06 No06.cc)
add_executable(No07 No07.cc)
add_executable(No10 No10.cc)
add_executable(No11 No11.cc)
add_executable(No12 No12.cc)
add_executable(No13 No13.cc)
add_executable(No14_1 No14_1.cc)
add_executable(No14_2 No14_2.cc)
add_executable(No15 No15.cc)
add_executable(No16 No16.cc)
add_executable(No17 No17.cc)
add_executable(No18 No18.cc)
add_executable(No21 No21.cc)
add_executable(Offer22 Offer22.cc)
add_executable(Offer24 Offer24.cc)
add_executable(Offer26 Offer26.cc)
add_executable(Offer27 Offer27.cc)

add_executable(Offer28 Offer28.cc)
add_executable(Offer29 Offer29.cc)
add_executable(Offer30 Offer30.cc)
add_executable(Offer31 Offer31.cc)
add_executable(Offer32_1 Offer32_1.cc)
add_executable(Offer32_2 Offer32_2.cc)
add_executable(Offer32_3 Offer32_3.cc)
add_executable(Offer33 Offer33.cc)
add_executable(Offer34 Offer34.cc)
add_executable(Offer35 Offer35.cc)
add_executable(Offer36 Offer36.cc)
add_executable(Offer38 Offer38.cc)
add_executable(Offer39 Offer39.cc)
add_executable(Offer40 Offer40.cc)
add_executable(Offer44 Offer44.cc)
add_executable(Offer45 Offer45.cc)
add_executable(Offer46 Offer46.cc)
add_executable(Offer47 Offer47.cc)
add_executable(Offer48 Offer48.cc)
add_executable(Offer49 Offer49.cc)
add_executable(Offer50 Offer50.cc)
add_executable(Offer54 Offer54.cc)
add_executable(Offer55_1 Offer55_1.cc)
add_executable(Offer55_2 Offer55_2.cc)
add_executable(Offer56_1 Offer56_1.cc)
add_executable(Offer56_2 Offer56_2.cc)
add_executable(Offer57_1 Offer57_1.cc)
add_executable(Offer57_2 Offer57_2.cc)
add_executable(Offer58_1 Offer58_1.cc)
add_executable(Offer58_2 Offer58_2.cc)
add_executable(Offer59_2 Offer59_2.cc)
add_executable(Offer60 Offer60.cc)
add_executable(Offer61 Offer61.cc)
add_executable(Offer62 Offer62.cc)
add_executable(Offer63 Offer63.cc)
add_executable(Offer64 Offer64.cc)
add_executable(Offer65 Offer65.cc)
add_executable(Offer67 Offer67.cc)