add_executable(Offer2_1 Offer2_1.cc)
add_executable(Offer2_2 Offer2_2.cc)
add_executable(Offer2_82 Offer2_82.cc)
add_executable(Offer2_7 Offer2_7.cc)
add_executable(Offer2_95 Offer2_95.cc)
add_executable(Offer2_25 Offer2_25.cc)
add_executable(Offer2_16 Offer2_16.cc)
add_executable(Offer2_21 Offer2_21.cc)
add_executable(Offer2_97 Offer2_97.cc)
add_executable(Offer2_51 Offer2_51.cc)
add_executable(Offer2_72 Offer2_72.cc)
add_executable(Offer2_27 Offer2_27.cc)
add_executable(Offer2_94 Offer2_94.cc)
add_executable(Offer2_39 Offer2_39.cc)
add_executable(Offer2_108 Offer2_108.cc)
add_executable(Offer2_101 Offer2_101.cc)
add_executable(Offer2_19 Offer2_19.cc)
add_executable(Offer2_41 Offer2_41.cc)
add_executable(Offer2_42 Offer2_42.cc)
add_executable(Offer2_112 Offer2_112.cc)
add_executable(Offer2_117 Offer2_117.cc)
add_executable(Offer2_6 Offer2_6.cc)
add_executable(Offer2_12 Offer2_12.cc)
add_executable(Offer2_34 Offer2_34.cc)
add_executable(Offer2_4 Offer2_4.cc)
add_executable(Offer2_5 Offer2_5.cc)
add_executable(Offer2_8 Offer2_8.cc)
add_executable(Offer2_26 Offer2_26.cc)
add_executable(Offer2_103 Offer2_103.cc)
add_executable(Offer2_9 Offer2_9.cc)
add_executable(Offer2_13 Offer2_13.cc)
add_executable(Offer2_11 Offer2_11.cc)
add_executable(Offer2_14 Offer2_14.cc)
add_executable(Offer2_15 Offer2_15.cc)
add_executable(Offer2_20 Offer2_20.cc)
add_executable(Offer2_22 Offer2_22.cc)
add_executable(Offer2_28 Offer2_28.cc)
add_executable(Offer2_30 Offer2_30.cc)
add_executable(Offer2_29 Offer2_29.cc)
add_executable(Offer2_79 Offer2_79.cc)
add_executable(Offer2_74 Offer2_74.cc)
add_executable(Offer2_96 Offer2_96.cc)
add_executable(Offer2_109 Offer2_109.cc)
add_executable(Offer2_87 Offer2_87.cc)
add_executable(Offer2_77 Offer2_77.cc)
add_executable(Offer2_100 Offer2_100.cc)
add_executable(Offer2_105 Offer2_105.cc)
add_executable(Offer2_84 Offer2_84.cc)
add_executable(Offer2_76 Offer2_76.cc)
add_executable(Offer2_99 Offer2_99.cc)
add_executable(Offer2_43 Offer2_43.cc)
add_executable(Offer2_81 Offer2_81.cc)
add_executable(Offer2_111 Offer2_111.cc)
add_executable(Offer2_119 Offer2_119.cc)
add_executable(Offer2_61 Offer2_61.cc)
add_executable(Offer2_47 Offer2_47.cc)
add_executable(Offer2_49 Offer2_49.cc)
add_executable(Offer2_44 Offer2_44.cc)
add_executable(Offer2_52 Offer2_52.cc)
add_executable(Offer2_46 Offer2_46.cc)
add_executable(Offer2_89 Offer2_89.cc)
add_executable(Offer2_85 Offer2_85.cc)
add_executable(Offer2_33 Offer2_33.cc)
add_executable(Offer2_106 Offer2_106.cc)
add_executable(Offer2_37 Offer2_37.cc)
add_executable(Offer2_113 Offer2_113.cc)
add_executable(Offer2_58 Offer2_58.cc)
add_executable(Offer2_80 Offer2_80.cc)
add_executable(Offer2_104 Offer2_104.cc)
add_executable(Offer2_60 Offer2_60.cc)
add_executable(Offer2_71 Offer2_71.cc)
add_executable(Offer2_92 Offer2_92.cc)
add_executable(Offer2_90 Offer2_90.cc)
add_executable(Offer2_38 Offer2_38.cc)
add_executable(Offer2_73 Offer2_73.cc)
add_executable(Offer2_65 Offer2_65.cc)
add_executable(Offer2_86 Offer2_86.cc)
add_executable(Offer2_63 Offer2_63.cc)
add_executable(Offer2_62 Offer2_62.cc)
add_executable(Offer2_53 Offer2_53.cc)
add_executable(Offer2_118 Offer2_118.cc)
add_executable(Offer2_98 Offer2_98.cc)
add_executable(Offer2_116 Offer2_116.cc)
add_executable(Offer2_55 Offer2_55.cc)
add_executable(Offer2_57 Offer2_57.cc)
add_executable(Offer2_45 Offer2_45.cc)
add_executable(Offer2_83 Offer2_83.cc)
add_executable(Offer2_91 Offer2_91.cc)
add_executable(Offer2_102 Offer2_102.cc)
add_executable(Offer2_67 Offer2_67.cc)
